--- a/list.html
+++ b/list.html
@@ -3,96 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Usuarios y Productos</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e5e5e5;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .list-section {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 500px;
-        }
-
-        h3 {
-            text-align: center;
-            font-size: 1.5rem;
-            margin-bottom: 20px;
-        }
-
-        .list-container {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .list-item {
-            background-color: #fafafa;
-            padding: 20px;
-            border-radius: 10px;
-            width: 200px;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 10px;
-        }
-
-        .list-item p {
-            font-size: 1.2rem;
-            margin-bottom: 15px;
-        }
-
-        .edit-btn, .delete-btn {
-            margin: 5px;
-            padding: 10px;
-            border-radius: 10px;
-            border: none;
-            width: 100px;
-            font-size: 0.9rem;
-        }
-
-        .edit-btn {
-            background-color: #4a90e2;
-            color: white;
-        }
-
-        .edit-btn:hover {
-            background-color: #428bca;
-        }
-
-        .delete-btn {
-            background-color: #f44336;
-            color: white;
-        }
-
-        .delete-btn:hover {
-            background-color: #d32f2f;
-        }
-    </style>
+    <title>Lista de Usuarios y Productos/Servicios</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <section class="list-section">
-        <h3>Lista Usuarios - Productos</h3>
+<body id="list">
+    <div class="section list-section">
+        <header>
+            <h1>Lista de Usuarios y Productos/Servicios</h1>
+            <a href="index.html" class="btn btn-secondary close-button">Cerrar</a>
+        </header>
+
         <div class="list-container">
-            <div class="list-item">
-                <p>Usuario 1</p>
-                <button class="edit-btn">Editar</button>
-                <button class="delete-btn">Eliminar</button>
-            </div>
-            <div class="list-item">
-                <p>Producto 1</p>
-                <button class="edit-btn">Editar</button>
-                <button class="delete-btn">Eliminar</button>
+            <section id="users-section">
+                <h2>Usuarios</h2>
+                <div class="list-controls">
+                    <input type="text" id="user-search" class="search-input" placeholder="Buscar usuarios...">
+          
+                    <button id="add-user-btn" class="btn btn-primary add-btn" style="display: none;">Agregar Usuario</button>
+                </div>
+                <ul id="user-list" class="item-list"></ul>
+            </section>
+
+            <section id="products-section">
+                <h2>Productos/Servicios</h2>
+                <div class="list-controls">
+                    <input type="text" id="product-search" class="search-input" placeholder="Buscar productos...">
+     
+                    <button id="add_product_btn" class="btn btn-primary add-btn">Agregar Producto/Servicio</button>
+                </div>
+                <ul id="product-list" class="item-list"></ul>
+            </section>
+        </div>
+
+        <div id="users-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Editar Usuario</h2>
+                <form id="edit-user-form">
+                    <input type="text" name="nombre" placeholder="Nombre" required>
+                    <input type="text" name="usuario" placeholder="Usuario" required>
+                    <input type="password" name="contrasena" placeholder="Contraseña" required>
+                    <select name="tipo">
+                        <option value="Administrador">Administrador</option>
+                        <option value="Publicador">Publicador</option>
+                    </select>
+                    <button type="submit">Guardar Cambios</button>
+                </form>
             </div>
         </div>
-    </section>
+
+<div id="products-modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Editar Producto/Servicio</h2>
+        <form id="edit-product-form">
+            <div class="form-group">
+                <label for="edit-nombre">Nombre</label>
+                <input type="text" id="edit-nombre" name="nombre" required>
+            </div>
+            <div class="form-group">
+                <label for="edit-descripcion">Descripción</label>
+                <textarea id="edit-descripcion" name="description" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="edit-categoria">Categoría</label>
+                <select id="edit-categoria" name="category" required></select>
+            </div>
+            <div class="form-group">
+                <label for="edit-precio">Precio</label>
+                <input type="number" id="edit-precio" name="price" step="0.01" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+        </form>
+    </div>
+</div>
+
+    <script src="script.js"></script>
 </body>
 </html>
